<resources>
    <string name="app_name">MitrofanovaViktoria</string>
    <string name="linear_button_text">Перейти на LinerLayout</string>
    <string name="relative_button_text">Перейти на RelativeLayout</string>
    <string name="constraint_button_text">Перейти на Constraint Layout</string>
    <string name="hint_for_edit_text">Поле для ввода</string>
    <string name="constraint_layout_Text">Обычный текс на ConstraintLayout</string>
    <string name="relative_layout_Text">Обычный текс на RelativeLayout</string>
    <string name="button_text">КНОПКА</string>
    <string name="go_with_result">Перейти на MainActivty и вернуть результат</string>
    <string name="default_result">Здесь будет результат</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_to_parent">Пердать данные родительскому фрагменту</string>
    <string name="listview">перейти к списку ListView</string>
    <string name="recycleview">перейти к списку RecyclerView</string>
    <string name="send_to_other">"отправить данные "</string>
    <string name="Go_to_second_fragment">Перейти на второй фрагмент</string>
</resources>