<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RelativeLayoutFragment">

    <TextView
        android:id="@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout_Text"
        android:textSize="20sp"
        android:layout_toEndOf="@id/button3"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/button_text"
        android:backgroundTint="@color/сиреневый"/>

    <EditText
        android:id="@+id/edit_text3"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@id/image3"
        android:layout_below="@id/image3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_for_edit_text"/>

    <ImageView
        android:id="@+id/image3"
        android:layout_below="@id/button3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ec9e2b886cbcf124501cd64d95e1dee3" />

</RelativeLayout>